--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,21 @@ body {
     width: 83.5%;
     min-height: 100dvh;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     padding-top: 50px;
 }
+
+.homeInterface{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 
 @media screen and (max-width: 768px) {
     
@@ -38,7 +48,7 @@ body {
     width: 100%;
     min-height: 100dvh;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     padding-top: 50px;
