--- a/styles/feedPage.module.css
+++ b/styles/feedPage.module.css
@@ -36,9 +36,8 @@ h1 {
   line-height: 1.8;
   font-size: 1rem;
   color:  black;
-  word-break: break-all;
   text-align: start;
-  border: 1px solid gray;
+  border: 1px solid rgb(224, 224, 224);
 }
 
 .section {
